# CLI_Chess

./: .clang-format  .gitignore  CMakeLists.txt  README.md  files
sources/: CMakeLists.txt
sources/common/: Board.cpp  Board.hpp  Coordinates.cpp  Coordinates.hpp  CoordinatesHasher.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  PlayerColor.hpp  PrettyPrint.cpp  PrettyPrint.hpp  TerminalStuffs.hpp
sources/common/Pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceColor.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
sources/common/exceptions/: BadCoord.hpp  BadMove.hpp
sources/common/tcp/: TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  TCPSocket.cpp  TCPSocket.hpp
sources/offline/: main-offline.cpp
sources/online/: AbstractOnlinePlayer.cpp  AbstractOnlinePlayer.hpp  ClientGame.cpp  ClientGame.hpp  LocalPlayer.cpp  LocalPlayer.hpp  RemotePlayer.cpp  RemotePlayer.hpp  ServerGame.cpp  ServerGame.hpp  main-client.cpp  main-server.cpp
